--- a/annonces-4.html
+++ b/annonces-4.html
@@ -147,7 +147,7 @@
             <div class="col-md-12 col-lg-10">
                 
                 
-                <p class="mbr-text mbr-fonts-style display-7">L’UPESR développe activement une coopération scientifique avec l’Institut de Recherche Dupuy de Lôme (France) <a href="https://www.irdl.fr" class="text-primary" target="_blank">https://www.irdl.fr</a> dans le domaine des énergies propres, de l'électrochimie et de l'hydrogène.<br>
+                <p class="mbr-text mbr-fonts-style display-7">L’UPESR développe activement une coopération scientifique avec l’Institut de Recherche Dupuy de Lôme (France) dans le domaine des énergies propres, de l'électrochimie et de l'hydrogène.<br>
 <br>Si vous êtes étudiant en Master, doctorant ou Docteur à l’UPESR dans ce domaine, nous vous invitons à participer à nos projets et aux programmes de mobilité scientifique financés.<br>
 <br>Pour plus d'informations, veuillez envoyer votre CV et la liste des publications au courriel sidorova_ev@npi-tu.ru avec objet « UPESR-IRDL ».&nbsp;<br></p>
             </div>
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="izHHnpnT7IkMTaqBieFOp3c7HIJ13NE2BP4j8VrWu8qEu8Njgjm20D496OXsOcXwTImZ3rRNdWgcC0G8bGHJDHdlKMN9gZ31d/4EcwSJUCo9WST7YIjw+9tbOeW8JmpG">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4FliNVrKlUPESTcGJVa9XxgSN5gYunCESgLndegCDx+F1UW2tpPXveW4/wreWQ+7F4VPrStXUMYmybPEiveRqdRlpg+zjD95JAFL0V03n0DvQckNdaQEPZCqDkY4rVP6">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
