--- a/projets-1.html
+++ b/projets-1.html
@@ -140,7 +140,7 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Le programme ERASMUS + MIC finance la mobilité des étudiants et du personnel afin de réaliser des échanges académiques entre l’UPESR et l'École Nationale Supérieure d'Ingénieurs de Tarbes https://www.enit.fr (France).<br><br></p>
+                            <p class="mbr-text mbr-fonts-style display-7">Le programme ERASMUS + MIC finance la mobilité des étudiants et du personnel afin de réaliser des échanges académiques entre l’UPESR et l'École Nationale Supérieure d'Ingénieurs de Tarbes (France).<br><br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.enit.fr/fr/relations-internationales/programme-mic.html" target="_blank">
@@ -170,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6jK1WsrpNZBdLUTx4LHPGVHWRGZO03lksc06k/g1bIjr1t0kkRXI45X4Lb9elI6+0Hg2lKRfiQZfwj8PLIWBcCf9x+Ou1LGeEs76UkoHZ5tCjKg8JznH7HdkKCQgdtRZ">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LgK3eibB6eaSHJQwDyMaKKv2X87qytop8GhiOnjqWq+PFJQPwKLiW5VgDtQvZduYqxKhWbZdOmw+HouBoOw3Efpvk/x8vFMTmZnhFSHfX0FlRk6BqibuQ0mg7Nsl0bW7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -226,7 +226,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
