--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -132,12 +132,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sUB6LqS9YX" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sUGtZ3OYOd" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUB6LqS9YX" data-bs-target="#sUB6LqS9YX"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -239,11 +239,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUB6LqS9YX">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUGtZ3OYOd">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUB6LqS9YX">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUGtZ3OYOd">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -283,7 +283,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gBALrHq0rxKps1RrdSYDmO7Dh6Jla99ZN41zYtN0P2IG406ZjL/TdzPl3pEW1ckmOoh88Va8ZGYq54H/M8aqIBK3oykYIcv5KGXJqtHuvJjva8Ha8cSDWFPefHSNEX1x">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="k5urEf9Qvk8NfKhGLvuONkB3rGcyDuquYhoZzXV1xG9OtOW6W4MOMqAIPNmbnIkp9VFF3wcIVkKKlJj7nGLBz6A5CpOVIbf9wYmW/mTe5tK231bY3QgIISa6uBQQjsJb">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -338,7 +338,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
