--- a/ru/projets-1.html
+++ b/ru/projets-1.html
@@ -140,7 +140,7 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Программа ERASMUS+ MIC финансирует мобильность студентов и сотрудников в целях осуществления академических обменов (обучение, стажировки, чтение лекций) между ЮРГПУ(НПИ) и Высшей национальной инженерной школой города Тарб ENIT https://www.enit.fr (Франция).<br></p>
+                            <p class="mbr-text mbr-fonts-style display-7">Программа ERASMUS+ MIC финансирует мобильность студентов и сотрудников в целях осуществления академических обменов (обучение, стажировки, чтение лекций) между ЮРГПУ(НПИ) и Высшей национальной инженерной школой города Тарб ENIT (Франция).<br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.enit.fr/fr/relations-internationales/programme-mic.html" target="_blank">
@@ -170,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZQafXHEsKx845GdYUjFXEKIN7MQbFFNvYCs+JHDYH/EhsYjE0tGTZ9rmXvw9Vemdk1yzxapqD1btoMh814uyosCqdND+xSn89hww9WPyrkBlUIHB02b2fhGo3AJCRFnI">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="iXqdnPw6vdTtPxZxdwCDtmav9UhnZwUaQX74HVwdzr0eLoOH0QdBYy4vMh6biED2xfbuw9dMnz33rZwGbpPIKUrq2JpEDm+p01njWCthP044k3X31LzDBoojmWIsfyKB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -225,7 +225,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
