--- a/ru/annonces-4.html
+++ b/ru/annonces-4.html
@@ -147,7 +147,7 @@
             <div class="col-md-12 col-lg-10">
                 
                 
-                <p class="mbr-text mbr-fonts-style display-7">Наш вуз активно развивает научное сотрудничество с Научно-исследовательским институтом Дюпюи де Лом (Франция) <a href="https://www.irdl.fr" class="text-primary" target="_blank">https://www.irdl.fr</a> в области чистой энергетики, электрохимии и водорода.<br>
+                <p class="mbr-text mbr-fonts-style display-7">Наш вуз активно развивает научное сотрудничество с Научно-исследовательским институтом Дюпюи де Лом (Франция)&nbsp;в области чистой энергетики, электрохимии и водорода.<br>
 <br>Если вы являетесь магистрантом, аспирантом или кандидатом наук ЮРГПУ (НПИ) и связаны с одним из указанных направлений, приглашаем вас для участия в наших проектах и в финансируемых программах научной мобильности.<br>
 <br>Для более подробной информации следует направить резюме и список публикаций на французском или английском языке по адресу электронной почты: sidorova_ev@npi-tu.ru с пометкой UPESR-IRDL.&nbsp;<br></p>
             </div>
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EOBRqkf1R9dFnsWt5zEuSN+kMBrrDfpNPWzO/KwVRp9xjGk120NTDTwBJo+RunTzivFkOsCMP8M58+KAeo8IPFNl3W4Y0b/b9AmS8IE0PI7H5PDhXucQGkHuOzkEgE3s">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lnsscHy1Ndv26sraCmvNAqVVcGiDo1kJHQW8AXg+7wPcLrYYNPTtLKtUtpbM7WS64jmY/MFoaJsaWUAgHsZ3SqJhENRgzaUTM0WHjN6ue9M8c/8eb3oMTLZfeXkFbSnt">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -229,7 +229,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
