--- a/ru/academiquesscientifiques.html
+++ b/ru/academiquesscientifiques.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2"><strong>Национальный политехнический университет Тулузы</strong></h6>
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Национальный политехнический институт Тулузы</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>
                             Institut National Polytechnique de Toulouse</strong></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://www.inp-toulouse.fr" target="_blank">ССЫЛКА</a></div>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2"><strong>Центральный университет Лилля</strong></h6>
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Центральная школа Лилля</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>
                             École Centrale de Lille</strong></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="https://centralelille.fr" target="_blank">ССЫЛКА</a></div>
@@ -267,7 +267,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sNBaFc1xrINp5KefDkQX7yuosMwDjzRGO7b5GcGYR4xllEbvig6XTa5VFBHr1PGJfBXiUcmUqyy9plY0HH9TeQVSF6agi94IseLn535LmNf9UyadddXxDygi5Z+bHoxn">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UrzMcSx4LDvIybNk/88tpmScFeBjiyiBEwyIhIyOfaRsufGLnw0G22lP6Obx2DudZqG1G4XwBM9cZjZBzYydQ6JBDjKMxKLkWiZrebYTkN5g0rb7I1vZirRP5mPO58lG">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -301,28 +301,28 @@
 
     <div class="container">
         <div class="row content mbr-white">
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Адрес</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
+                <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-4"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
                         <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -362,7 +362,7 @@
                 </div>
             </div>
             <div class="col-sm-12 copyright pl-0">
-                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                <p class="mbr-text mbr-fonts-style mbr-white display-4">
                     © Copyright 2022 IFR UPESR</p>
             </div>
         </div>
