--- a/ru/actualites-3.html
+++ b/ru/actualites-3.html
@@ -131,12 +131,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sUGtWubIf8" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sUZtrdJ0yb" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sUGtWubIf8" data-bs-target="#sUGtWubIf8"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sUZtrdJ0yb" data-bs-target="#sUZtrdJ0yb"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -303,11 +303,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUGtWubIf8">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUZtrdJ0yb">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUGtWubIf8">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUZtrdJ0yb">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -340,7 +340,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VNMCybGGnT3wRVQdKiCQ2lblhMCU/2wiqtRHTf1AGtcViWvgWaE13L99zNMq4LgQEqBwHV8NMSLFafZJ1xad7N4IVEKpL/Je/AvrORjdyOzWEDaUvQ1umpIWElW98SJh">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lj2DyG3Jb4cpsXGSLqoZJaSXt3//3nJ/ppzpLz9/IAw0P8XnCSXPTCrD024wOM0f0jt5Y/o42dahcGr/2cvUZJuQPLxZPJqHowv/x8ZjtDKhEQMuan9N+B+xljAiO1Xl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -374,24 +374,24 @@
 
     <div class="container">
         <div class="row content mbr-white">
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Адрес</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
+                <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-4"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
                         <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="col-sm-12 copyright pl-0">
-                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                <p class="mbr-text mbr-fonts-style mbr-white display-4">
                     © Copyright 2022 IFR UPESR</p>
             </div>
         </div>
