--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -132,12 +132,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sUGtZ3OYOd" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sUZttwmKIM" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUGtZ3OYOd" data-bs-target="#sUGtZ3OYOd"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sUZttwmKIM" data-bs-target="#sUZttwmKIM"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -239,11 +239,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUGtZ3OYOd">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sUZttwmKIM">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUGtZ3OYOd">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sUZttwmKIM">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -283,7 +283,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="k5urEf9Qvk8NfKhGLvuONkB3rGcyDuquYhoZzXV1xG9OtOW6W4MOMqAIPNmbnIkp9VFF3wcIVkKKlJj7nGLBz6A5CpOVIbf9wYmW/mTe5tK231bY3QgIISa6uBQQjsJb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="F2hq+Vlb/Ty5+TBmFyxK6z1YLNw24z4Ol/JHb3cQ9mSnT4zwNtUaH+d7v7ajELcXy6YADNWO6JmYNRB3x/6QvNw54M0bHTdp0vkiWK8pLO1QsRe/VihXsnZFUlfe16pO">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -317,28 +317,28 @@
 
     <div class="container">
         <div class="row content mbr-white">
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Адрес</strong></h5>
-                <p class="mbr-text mbr-fonts-style display-7">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
+                <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-4"><strong>Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова</strong></h5>
                 <ul class="list mbr-fonts-style mb-4 display-4">
                     <li class="mbr-text item-wrap">
                         <a class="text-white text-primary" href="https://www.npi-tu.ru" target="_blank">https://www.npi-tu.ru</a></li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Обратная связь</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-7">
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
@@ -378,7 +378,7 @@
                 </div>
             </div>
             <div class="col-sm-12 copyright pl-0">
-                <p class="mbr-text mbr-fonts-style mbr-white display-7">
+                <p class="mbr-text mbr-fonts-style mbr-white display-4">
                     © Copyright 2022 IFR UPESR</p>
             </div>
         </div>
