--- a/ru/teissier.html
+++ b/ru/teissier.html
@@ -117,7 +117,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-12">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-1"><strong>Себастьян ТЕССЬЕ</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>Эксперт в области франко-российских отношений, историк</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7"><strong>Эксперт по нейродегенеративным заболеваниям</strong></h4>
                 
             </div>
         </div>
