--- a/ru/bonnel.html
+++ b/ru/bonnel.html
@@ -141,7 +141,7 @@
                             
                             <p class="mbr-text mbr-fonts-style display-7">Преподаватель-руководитель курса «Разработка и создание документальных и трансмедийных проектов» (Университет Париж 1 Пантеон-Сорбонна) и «Управление разработкой медиапроектов» (INA – Национальный аудиовизуальный институт).
 <br>
-<br>Автор-режиссёр документальных фильмов « Тишина в Нагорном Карабахе 52'  (Spicee.com)», « Донбасс » (Les films de Sacha), « Лазарь поднимает завесу » (TV LAB France Télévision) и других.&nbsp;<br><br></p>
+<br>Автор-режиссёр документальных фильмов «Тишина в Нагорном Карабахе 52'»  (Spicee.com), «Донбасс» (Les films de Sacha), «Лазарь поднимает завесу» (TV LAB France Télévision) и других.&nbsp;<br><br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.facebook.com/sillonnerlemonde/" target="_blank">
@@ -179,7 +179,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uUgP5NGB/z+jXR0HUKuiUeUVWZ0vEpu8LaePsP1N+TCuDavAWV/3v4sR9+aYuHZ7InVxqX2XX7JW4S10SJO3BsjXK5GHDxsDx9YWTfGPHLk0e0R8NKjcwIenfa/ItZE2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZgP7oPN9ABKslcnI+TOVb9p1rhAN5kcFdHZtBJe6mmihQObU3r8iAALmJPPj9yQDFjXNba4TaNsS/YmrX3nCOSVNWeNParAMGuyDdib/FXXKS+9/Sxw9yny2dsqE97lB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
