--- a/ru/soromotine.html
+++ b/ru/soromotine.html
@@ -142,7 +142,7 @@
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
-                                    <a href="https://scholar.google.com/scholar?hl=ru&as_sdt=0%2C5&q=VN+Soromotin&btnG=" target="_blank">
+                                    <a href="https://scholar.google.com/scholar?hl=ru&as_sdt=0%2C5&as_vis=1&q=%22VN+Soromotin%22+OR+%22%D0%92%D0%9D+%D0%A1%D0%BE%D1%80%D0%BE%D0%BC%D0%BE%D1%82%D0%B8%D0%BD%22&btnG=" target="_blank">
                                         <span class="mbr-iconfont socicon-googlescholar socicon"></span>
                                     </a>
                                 </div>
@@ -169,7 +169,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Dd7Av5E+JzxeuOByqmNln+7d4iBxWkudBMkn8XqK43nmfwTsL7kiCrGzvX6wYo+bewciw9c2Y9AgVGcOCtN8GVvhtjzXBuAIQDZ6DZcXOumPu4EnG+g+BEK5JWvZubjv">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="7Kt3tXJvtoJ0Wk1FWU0lg4tlrnLQ1ps4reALmF1gUmwPrO5aLT4Ia3dZXGa7o1x6YdgWsSQExvoFv0j7N866JH8wd3kQyoJlGPqxoHxAOUu5Ya57k+QwKEmKIRpEikYU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -224,7 +224,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
