--- a/soromotine.html
+++ b/soromotine.html
@@ -142,7 +142,7 @@
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
-                                    <a href="https://scholar.google.com/scholar?hl=fr&as_sdt=0%2C5&q=VN+Soromotin&btnG=" target="_blank">
+                                    <a href="https://scholar.google.com/scholar?hl=fr&as_sdt=0%2C5&as_vis=1&q=%22VN+Soromotin%22+OR+%22%D0%92%D0%9D+%D0%A1%D0%BE%D1%80%D0%BE%D0%BC%D0%BE%D1%82%D0%B8%D0%BD%22&btnG=" target="_blank">
                                         <span class="mbr-iconfont socicon-googlescholar socicon"></span>
                                     </a>
                                 </div>
@@ -169,7 +169,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RSYNQ17X18g4OxXJQs550V/3Q4Q6gb+uwkwW/ij8PIoCFNJtl2QoGG8280f3cyuBHbSNurGNGsIJpFwo4XkJ0JSHVJD8BrnZ+cM+W6mMGRWaq3JJ1juC4wVpW3WdvkT5">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MiQmpeMpTZvXdbAdNom033x+Kndpoy3IcfNO01Ju5H8FGTH69OD6U087NS6nXQtntKbG39rR4GvWEPpwrHt5HK/rqURUR75PpyLWJvfLAlSVPAOQowSwpQNnYYPDFSSD">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
