--- a/bonnel.html
+++ b/bonnel.html
@@ -139,9 +139,10 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Enseignante-Responsable de cours « Conception et réalisation de projets documentaires et transmedia » (Université Paris 1 Panthéon-Sorbonne) et « Pilotage projets conception média » (INA - Institut national de l'audiovisuel).
+                            <p class="mbr-text mbr-fonts-style display-7">Enseignante-Responsable de cours «&nbsp;Conception et réalisation de projets documentaires et transmedia&nbsp;» (Université Paris 1 Panthéon-Sorbonne) et «&nbsp;Pilotage projets conception média&nbsp;» (INA - Institut national de l'audiovisuel).
 <br>
-<br>Auteur-réalisatrice des documentaires « Silence dans le Haut-Karabagh. 52'  (Spicee.com)», « Donbass » (Les films de Sacha), « Lazarus lève le voile » (TV LAB France Télévision) et d’autres.&nbsp;<br><br></p>
+<br>Auteur-réalisatrice des documentaires «&nbsp;Silence dans le Haut-Karabagh. 52'&nbsp;» (Spicee.com), «&nbsp;Donbass&nbsp;» (Les films de Sacha), «&nbsp;Lazarus lève le voile&nbsp;» (TV LAB France Télévision) et d’autres.
+<br><br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.facebook.com/sillonnerlemonde/" target="_blank">
@@ -179,7 +180,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MgP4QxNHbwCdwD6htVLkWj9u4tUfbf2fH+2URERKLXBcT5Hcr+rnxu0BK3wtQtXYwVvNDpNbtDZCJENqlfUtyrlCGzb3xTGHFVpP3WI3ewMpw9ispNwXfMkDOIxV/7kc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cT/Uc1kapjkMfNrgjtQukgfqsRv/jI+7+ZlClPZ/imwu8/HiJ4TURoqTvIninwtjQELdyCjX4lSR/2yg6ErL4JuM3N451Mk8KV6FLDwgvNTr4a8vFfH0zm2tW22M7YXP">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
