--- a/ru/actualites-5.html
+++ b/ru/actualites-5.html
@@ -132,12 +132,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sVhaH6qWLS" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sVkbNd95Ls" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVhaH6qWLS" data-bs-target="#sVhaH6qWLS"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVkbNd95Ls" data-bs-target="#sVkbNd95Ls"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -239,11 +239,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVhaH6qWLS">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVkbNd95Ls">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVhaH6qWLS">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVkbNd95Ls">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -283,7 +283,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GJDRXyQZtngxl/q0p+fcOv6KEKMHUUHtTj86QtX+TCs7vkKrQlq1HSKtgeM7X1ZaFAZLBCl88m47eaGNUqVJ6SpD5xogKYe62Dx17bCZop607u79KhDR+SlhMQWbVDoY">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EyqriRRm73Hks41STnknVvHLW/Vxaw5F6HN8T/QalEhSJMsF64mWL8/xCNUh0xI1/wcjpWMcRpma0/LbFUHLLqCgqSVQ1uTcxGnUsp5+dLHGg9TmddCFkvWePhLoXEp2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -338,7 +338,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
