--- a/maurice.html
+++ b/maurice.html
@@ -162,7 +162,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="y9I6fod/x2HGftpXsF9MsQcBSRoeig9FJ6kcmtiJsOlT+QDebN1uHeUFLfFFW+2HeRD5NesRHVXNuoS7FKpN29d2KY1Kd7ysRNlttJOFzdsnEqUsFVm/u0dIreAiLUXR">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xb6rJ/nMXcU/E7AYyPUnJIf+UlwHwKRZSHgbd8FCyXJgpDYmnenWU6iE6Hmy9JG5hszS+ueF3Bg3/NLYI6hCwWdo2L9gM/AfasnxAvWbASpAe5h+ai/qVQuIKVXv3bY7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -203,7 +203,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
