--- a/ru/annonces-4.html
+++ b/ru/annonces-4.html
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gwiLcjGCVI4QbSXO9uXoT/bt3RJlPq1q+UMJ4QwmK2Mj0bWpWqy2zr7zn4Omm08JHEKcmFaTL9mYlXz5f0VizeMkMgRLctn5YQEKnId1O5lwAYJOUKphanrc7A71TZVL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="d11NwiUYSBEZTBMDEPgvFkZ1giDrGr8iUc5FAmXOf3DBS15o0ew7DWaQaN1xaOhSjQ2R3gtfOn4ow0/er+A340iK3cdSq2RNx+anwyGpdC6XuzjGRWh0KB3WL6WXcsXp">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -214,7 +214,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -229,7 +229,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
