--- a/soromotine.html
+++ b/soromotine.html
@@ -169,7 +169,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4YzvBdh4b9EhmCo35GpAPLlaXNb1RwyPdo5Iy07wRq7nSJ2PKfMyRkJ6LZhC8neRPOk54r416hGrAfvVlVMCRSlodQCsyd/NHin5HaiYMXEmRlvT0qbC0yeA+SBgj2Io">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cnfN2DFZOn/UtB9IphZBiRQZqaRTx141sxqXdNCGXkgk4N2sRd4VFEj0KTqLLTizaWCPDsTlizXBe2x4o8n93xQpNPp58OSbEt6jGzbi0/L19XykPVivy4P5IiCu2CbL">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -210,7 +210,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
