--- a/actualites-5.html
+++ b/actualites-5.html
@@ -131,12 +131,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sVlFMaY7d6" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sVn5eyZZhl" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVlFMaY7d6" data-bs-target="#sVlFMaY7d6"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVn5eyZZhl" data-bs-target="#sVn5eyZZhl"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -238,11 +238,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVlFMaY7d6">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVn5eyZZhl">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVlFMaY7d6">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVn5eyZZhl">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -282,7 +282,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="R1ezR7DSAMkxRKt6rnfkvCb0qIjsvM24JRTQbvEYH77RKXhjH+DXlTumt+AjHLpjyGBADN11wXTmdUD/Hr2NQAU3zB9myaHE1jCTOV5WpUFmbLSEzLRCroSeXSu0ay7S">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2N5w4g9zCB6jQyEL1EBoRtpWnuAvgv66STtjPfdXnhCqvcN8JYuJYXST9RIl3Jr6AH04W5/GrzsDWPfQjxMEIro8ZfjMTSbdvyd6qdIXH0kMCqgfgBv4z6Ry72J3LoJB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -323,7 +323,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -338,7 +338,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
