--- a/annonces-1.html
+++ b/annonces-1.html
@@ -188,7 +188,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="h73laKAKPYq9gpqFqpn1nRcS7UHVYkvqKEeGHN2PLbUXEJ8pAgnqm6lPhQuSHPLYOKWojVJ/20k85/JHteW3YJsRiNaT73yIm2vhjfVmC84pn7Bxc+W9MRJNnium3B77">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="n3ZFupM/OMzgYYvkWPsjvYT8x/gnejx3m+VbU0AEfvGyUK/BhIcdVvygBTw2aWDpKNfPiesH4FtFSfsRRlV7d+Rye3/GJX3+kN+WSh/2gBcECKXEXzx1teShAgALODjo">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -229,7 +229,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
