--- a/crepin.html
+++ b/crepin.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Yann CREPIN, musicien, compositeur et interprète">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="Médaillé du conservatoire de Rennes. ">
+  <meta name="description" content="Flûtiste médaillé du conservatoire de Rennes, pianiste et compositeur, brillant élève de la classe de flûte traversière de Marie Jo Lamotte, en classes CHAM musicales, il côtoie Yann Tiersen, Yvan Cassar ou encore Vanessa Wagner.">
   
   
   <title>Yann CREPIN, musicien, compositeur et interprète</title>
@@ -196,7 +196,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="29mN5J/R3tXCKxNwICYYjyFC7ZeMrg8ijaxf+xdQNRRPMtcMTFUXoz6Oy7r85bBUY1YforkGCby535b7OkrvgD2qIRvqFi74hoE3un4n+aBlgQkIP/l1hNffLcxYhzt+">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="3CF/8niOW71Uw1LMQViRBvkVQCRFBk1grcv2vckleKGy5YUThj+B60BcoOnBodBJq8tiHBdYJczOq53kQDx+9Z7kbT5HIIGtyTPdiLx9kBXWUsiMVh4YenrTcGwnRJ81">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -237,7 +237,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -252,7 +252,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
