--- a/experts.html
+++ b/experts.html
@@ -166,7 +166,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="https://www.yann-crepin.fr" target="_blank"><img src="assets/images/crepin-752x501.jpg" alt=""></a>
+                        <img src="assets/images/crepin-752x501.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -174,6 +174,30 @@
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Yann CREPIN</strong></h6>
                         <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Musicien, compositeur et interprète</strong><br></p>
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="crepin.html" target="_blank">LIEN</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section data-bs-version="5.1" class="features16 cid-sVn4DXzrky" id="features17-98">
+    
+
+    
+    <div class="container">
+        <div class="content-wrapper">
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-4">
+                    <div class="image-wrapper">
+                        <img src="assets/images/guerin-surville-1-702x702.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-lg">
+                    <div class="text-wrapper">
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Charles GUÉRIN SURVILLE</strong></h6>
+                        <p class="mbr-text mbr-fonts-style mb-4 display-7"><strong>Réalisateur, auteur, acteur</strong><br></p>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="guerin-surville.html" target="_blank">LIEN</a></div>
                     </div>
                 </div>
             </div>
@@ -214,7 +238,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="http://causepsy.fr" target="_blank"><img src="assets/images/mogniat-752x791.jpg" alt=""></a>
+                        <img src="assets/images/mogniat-752x791.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -286,7 +310,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="https://laplumedutemps.net" target="_blank"><img src="assets/images/truchet-752x505.jpg" alt=""></a>
+                        <img src="assets/images/truchet-752x505.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -309,7 +333,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xFJsvkFM0DU1m+nlExQynlW6bv2kpLM5IsRn7fKhgXtHEAQZHYw9WiNIZvMTQ/dUr7AEtseX0VrI0jIJlIY7DUMzlysh/7f/Yo8XuvPMwtPqMVmGuyhODCWaN/9M0+PE">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Psx28iMPB5fXseQnhQzwUjgfVJx9d5XxjdCNg5tZ1wfZBE24IsMWo/uLseBnLP8XNPBVciGUsiF8AkUb0DERHnBRqbcca41i4fmi+nZRtHpf8C7J0Q3WtxZLx/AY4M0d">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -350,7 +374,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -365,7 +389,7 @@
                     Si vous êtes intéressé par une coopération avec l’Institut Franco-Russe de l’UPESR, vous avez une idée ou un projet, ou vous ne connaissez pas encore le domaine d'interaction potentielle et souhaitez en discuter, nous serons toujours heureux de vos message.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
