--- a/propositionsdeprojets.html
+++ b/propositionsdeprojets.html
@@ -141,7 +141,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Wdo+D+MiqMmzgEYVi30NKIE7RBTN3mRbVr+Aes4jFxNms73rOg+wSFKucyDBmHQTUapLy3S7QCuYtveJG7FUVdtwZM7Rp3YnmZr5XuJFVbjDtpAMynW29sjY7pJw72Qy">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DdfNahEAEiqM50nTZgYKtRNg1QtlUzEqTomORnRLo/6kppPBTscB//Bh2x50WyZ+SpZHtsryUSzNRLxvyrfdQoHN/OGenxLpshxoJyS+7I6LA9RZegngZ68Gre6oEZ7T">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -182,7 +182,7 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Contacts</strong>
                 </h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directeur :<br>Elena SYDOROVA<br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Directrice :<br><a href="sydorova.html" class="text-secondary">Elena SYDOROVA</a><br>Courriel :<br>sidorova_ev@npi-tu.ru <br>
                     Tél. : +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
