--- a/ru/academiquesscientifiques.html
+++ b/ru/academiquesscientifiques.html
@@ -267,7 +267,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sbZLwTszR6HuWzHg9G1naX6/o7BeUK8YToz3h4g42Epl4p6jH1uYuBue0jXw1BSi+ly2QzzPQp0ZJeoN7luPizCOZxsecjP5BZSHywE0uCw9R7hvBOmJ8jleG7ztv4WS">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="utm44TXNpT8LX2A8EAGCt3H8slaE/nK5ddvcTV0GQ6uofx4YPwvRvvmP5DAuiht07GsnthuHHcWLgUPGZegW2SbN3GpurQF62p23InJFLZ9MT/CZoL2wUKLQEYt5z0ss">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -307,7 +307,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
