--- a/ru/actualites-3.html
+++ b/ru/actualites-3.html
@@ -131,12 +131,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="sVkVTMtVSo" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="sVn9z9D9ko" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sVkVTMtVSo" data-bs-target="#sVkVTMtVSo"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="13" data-bs-slide-to="13" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="14" data-bs-slide-to="14" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="15" data-bs-slide-to="15" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="16" data-bs-slide-to="16" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="17" data-bs-slide-to="17" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="18" data-bs-slide-to="18" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="19" data-bs-slide-to="19" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="20" data-bs-slide-to="20" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="21" data-bs-slide-to="21" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="22" data-bs-slide-to="22" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="23" data-bs-slide-to="23" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="24" data-bs-slide-to="24" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="25" data-bs-slide-to="25" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="26" data-bs-slide-to="26" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="27" data-bs-slide-to="27" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="28" data-bs-slide-to="28" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="29" data-bs-slide-to="29" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="30" data-bs-slide-to="30" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li><li data-slide-to="31" data-bs-slide-to="31" data-target="#sVn9z9D9ko" data-bs-target="#sVn9z9D9ko"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -303,11 +303,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVkVTMtVSo">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#sVn9z9D9ko">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVkVTMtVSo">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#sVn9z9D9ko">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -340,7 +340,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gS3zUNhLnU8f2GDlvEi50CjNWxuNeAnBjG1VY7eK3UCveTm5qf6atElCwcuKJCGTDouSv3SEMqw3fZCYmH/Ae8/dqfMnm3D8SE71FJwf8QOzVGTP5+dlF+Lyrpx7dT2f">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Q/HyC9zkaigsVg0srYy/TF6Zcp1gFWmZqfG77ES8HDQD2g3Qcf/Biob+qAB+5Nr7YQmmbCk1A93WjcSuoB5VblQrjvi4rG6H6FtQKxB4Ahu+/jF6gaEp/GFlnCUOXNGn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -380,7 +380,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -395,7 +395,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
