--- a/ru/annonces-1.html
+++ b/ru/annonces-1.html
@@ -188,7 +188,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5VThkdZxM0fyx3NNTnqZQGhRdjtJqaaaq9Bqxrr2HII3gWBrIhWPZVyPvGPoa+SINNIhaZH87qiCNBXNUNSi5/HxXkJBi5K+C4siaIUu5mYoqrCumCxH/9uQ6wN++WwH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NVAJO8wQxPef0uig4lapHazgd67GO9H81+JyjHQbv/kOqACq42IFmD6FZivQCKey0xCELLnC5HIelU7uzVJSPOvx5y6jKHFMwz35oquUHvVGF3rbQF1u7royRkBPW9b3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -228,7 +228,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
