--- a/ru/bachelet.html
+++ b/ru/bachelet.html
@@ -162,7 +162,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MBzs3vrpdVYjKa0MyF41mJNh6lMft799Efw71DG50foTuHPUNRKz7mQOUTomhPx8VPhudg8vXOvFu5rjGR0/bONtO+xtpQKugKPQFFCXqhAnTxabqEfm1AlhMMxzalJv">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TVEw5yVouFlxRzn8KZ+c20kMy1T3N52P5Kzoilu+vRsN/mY1xx1JR6RWPNZbiDCqq766PXYE5dXS2E3hHopYIMNP4qspsbyI0Xh9wbZ9ewsbMunp1pbkDmbGCl/abZVK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -202,7 +202,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
