--- a/ru/crepin.html
+++ b/ru/crepin.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Ян КРЕПЕН, музыкант, композитор и исполнитель">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="Награждён медалью консерватории Ренна. ">
+  <meta name="description" content="Флейтист, награждённый медалью консерватории Ренна, пианист и композитор, блестящий ученик класса поперечной флейты Мари Жо Ламотт, в музыкальных классах CHAM пересекается с Яном Тьерсеном, Иваном Кассаром и Ванессой Вагнер.">
   
   
   <title>Ян КРЕПЕН, музыкант, композитор и исполнитель</title>
@@ -140,7 +140,7 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Флейтист, награждённый медалью консерватории Ренна, пианист и композитор, блестящий ученик класса поперечной флейты Мари Жо Ламотт, в музыкальных классах CHAM пересекается с Яном Тирсеном, Иваном Кассаром и Ванессой Вагнер.
+                            <p class="mbr-text mbr-fonts-style display-7">Флейтист, награждённый медалью консерватории Ренна, пианист и композитор, блестящий ученик класса поперечной флейты Мари Жо Ламотт, в музыкальных классах CHAM пересекается с Яном Тьерсеном, Иваном Кассаром и Ванессой Вагнер.
 <br>
 <br>Обречённый на карьеру солиста, Ян приумножает свои первые места на конкурсах и совершенствует свой инструмент с Идой Риберой, преподавателем Парижской консерватории, которая знакомит его с известным концертным исполнителем Жаном Пьером Рампалем.
 <br>
@@ -196,7 +196,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zFCqEQl3z4Q/c+0ghg3nPIkEcW040tpzn1wDmSxzKBconK+QurISK2KwzDFyRKPF2zQPv0qZ6Mdb8ddhuhKDCDCpkDlkwWkIUNrOuaxVPpiYEF6uejLu1kDNCqjdzP1L">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ft7L7HmgAGnMUb3rsb+2A56e40EQ199B0Y+1bRE8YLhraNh37PikvWNFz6M+ZRAkU19tu/C1T8Ga22JELPp8jGjLvk6togG8gwW07vc2Kdk9Ir8g1SBBONnIq8xFTpjy">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -236,7 +236,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -251,7 +251,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
