--- a/ru/mogniat.html
+++ b/ru/mogniat.html
@@ -170,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1koDmWkUDQeNTQNXAW+7LYJmQcPnm9ZXgBo1vpQfG6AQHaXO23C5SLp3QQyYdpFTJApwCrAYoH7ua/1HQ1esbvf+h7sSz6gUy9BEc7WHYFK6ZNjZkqcH8TaCrPOBMAky">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="V+LETdEdAKpNB/7Xyu9LwhkbejgUSLOWTqk7/edsxtsT6hKzmjC4awwKeuzKnTfhDsOENOX55bE4xslXpzEvVnPafqHACRG7MrC1Qi5NJa+LxZGJTndwvEUVlrXNjx0s">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -210,7 +210,7 @@
                 <p class="mbr-text mbr-fonts-style display-4">РФ, 346428,<br>Ростовская обл.,<br>г. Новочеркасск,<br>ул. Просвещения, 132</p> <br>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4 display-7">
                     <strong>Контакты</strong></h5>
-                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br>Елена Сидорова<br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
+                <p class="mbr-text mbr-fonts-style mb-4 display-4">Директор:<br><a href="sydorova.html" class="text-secondary">Елена Сидорова</a><br>Эл. почта:<br>sidorova_ev@npi-tu.ru <br>
                     Тел.: +7 863 525 54 71<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
