--- a/projets-3.html
+++ b/projets-3.html
@@ -11,7 +11,7 @@
   <meta name="twitter:title" content="Proposition d'exposition de l’illustrateur Éric Bouvet">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-96x61.png" type="image/x-icon">
-  <meta name="description" content="Illustrateur sur Paris je me permets de vous soumettre ouvre proposition d'exposition donc d'évènements artistique à savoir exposition d'illustrations sur papier sur le thème de la culture et de l'histoire russe. J'ai pu avoir la chance d'étudier la langue Russe au collège pendant 1 année et fût enthousiasmé par cette langue si littéraire à bien des égards. ">
+  <meta name="description" content="Illustrateur sur Paris je me permets de vous soumettre une proposition d'exposition donc d'évènements artistique à savoir exposition d'illustrations sur papier sur le thème de la culture et de l'histoire russe. J'ai pu avoir la chance d'étudier la langue Russe au collège pendant 1 année et fût enthousiasmé par cette langue si littéraire à bien des égards. ">
   
   
   <title>Proposition d'exposition de l’illustrateur Éric Bouvet</title>
@@ -140,7 +140,7 @@
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Illustrateur sur Paris je me permets de vous soumettre ouvre proposition d'exposition donc d'évènements artistique à savoir exposition d'illustrations sur papier sur le thème de la culture et de l'histoire russe. J'ai pu avoir la chance d'étudier la langue Russe au collège pendant 1 année et fût enthousiasmé par cette langue si littéraire à bien des égards.<br> 
+                            <p class="mbr-text mbr-fonts-style display-7">Illustrateur sur Paris je me permets de vous soumettre une proposition d'exposition donc d'évènements artistique à savoir exposition d'illustrations sur papier sur le thème de la culture et de l'histoire russe. J'ai pu avoir la chance d'étudier la langue Russe au collège pendant 1 année et fût enthousiasmé par cette langue si littéraire à bien des égards.<br> 
 <br>J'ai bon espoir de trouver un lieu et une structure sur Paris dans lequel je pourrais donner une autre vision, parfois malheureusement réduite, à mes compatriotes français et en parallèle rendre un modeste hommage au patrimoine culturel de la Russie ; cette dernière et la France ayant eu à de nombreuses occasions des liens et partenariats culturels et commerciaux en commun.<br> 
 <br>J'espère vraiment pouvoir attirer l'attention des plus hautes instances russes pour ce projet ainsi obtenir l'aide et un appui pour cet événement artistique qui mettra en lumière tout ce magnifique patrimoine culturel auquel je veux rendre hommage.<br>&nbsp;<br></p>
                             <div class="social-row display-7">
